--- a/test/expected/use.html
+++ b/test/expected/use.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset="UTF-8">
         <title>grunt-sea-hashmap test</title>
-        <script src="/static/seajs/sea.js" data-main="page/c?8c9bef5cb9b0891097f88c72accc48f3"></script>
+        <script src="/static/seajs/sea.js" data-main="page/c.js?8c9bef5cb9b0891097f88c72accc48f3"></script>
     </head>
     <body>
 
